# s2pa-muxl

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.githooks/: pre-commit
crates/mp4/src/: types.rs
crates/mp4/src/mp4box/: mod.rs  stsd.rs
crates/muxl-sign/: Cargo.toml
crates/muxl-sign/src/: cli.rs  error.rs  lib.rs  main.rs  sign.rs
crates/muxl-sign/tests/: sign_roundtrip.rs
docs/: s2pa-muxl-blogpost.md
examples/: mp4copy.rs
examples/go-wasi/: go.mod  go.sum  main.go
examples/playback-worker/: package.json  tsconfig.json  wrangler.toml
examples/playback-worker/src/: index.ts
samples/test-keys/: README.md  es256k-cert.pem  es256k-key.pem
scripts/: compare.html  generate-test-fixtures.sh  generate-test-keys.sh  mp4dump.py  remux.sh
spec/: architecture.md  canonical-form.md  known-bugs.md  open-questions.md
src/: canonicalize.rs  catalog.rs  cbor.rs  cli.rs  concat.rs  error.rs  flat.rs  fragment.rs  init.rs  lib.rs  main.rs  push.rs  sample_table.rs  segment.rs  source.rs  timescale.rs  track.rs  wasm.rs  wasm_io.rs
src/mp4box/: opus.rs
tests/: lib.rs  round_trip.rs
web/: compare.html
