[package]
name = "muxl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dasl = "0.2"
mp4-atom = { git = "https://github.com/streamplace/mp4-atom.git", branch = "streamplace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tempfile = "3"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
